--- a/Graphic Programming Assignment.vcxproj
+++ b/Graphic Programming Assignment.vcxproj
@@ -24,6 +24,10 @@
       </SubType>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\Downloads\Daylight Box UV.bmp" />
+    <Image Include="..\..\..\Downloads\text.bmp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
